[gd_scene load_steps=5 format=2]

[ext_resource path="res://main menu.gd" type="Script" id=1]
[ext_resource path="res://levels/level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/level2.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/UI_font1.tres" type="DynamicFont" id=4]

[node name="main menu" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
levels = [ [ ExtResource( 2 ), 0 ], [ ExtResource( 3 ), 0 ] ]

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -103.5
margin_right = 224.0
margin_bottom = 103.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "Rect" ]

[node name="button_play" type="Button" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 448.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Size Flags" ]

[node name="button_exit" type="Button" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 113.0
margin_right = 448.0
margin_bottom = 207.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 1
_sections_unfolded = [ "Focus" ]

[node name="PanelLevels" type="PanelContainer" parent="." index="1"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -377.0
margin_top = 22.0
margin_right = -29.0
margin_bottom = -21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_next = NodePath("VBoxContainer/Button")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelLevels" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 341.0
margin_bottom = 550.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Button" type="Button" parent="PanelLevels/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 314.0
margin_right = 334.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 8
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "X"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Label" type="Label" parent="PanelLevels/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 334.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "LEVELS"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="LabelStars" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "stars: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="VBoxContainer/button_play" to="." method="_on_button_play_pressed"]

[connection signal="pressed" from="VBoxContainer/button_exit" to="." method="exit"]

[connection signal="pressed" from="PanelLevels/VBoxContainer/Button" to="." method="hide_panel" binds= [ "levels" ]]


